# neural-networks

./: .gitignore  README.md  Training_Examples.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
lightning_logs/: .gitignore
neural_networks/: config.py
neural_networks/data_loaders/: mnist_module.py
neural_networks/models/: fully_connected.py  fully_connected_module.py  resnet_blocks.py  resnet_models.py  resnet_module.py  vgg.py  vgg_blocks.py  vgg_models.py  vgg_module.py
neural_networks/pl_modules/: fully_connected.py
